--- a/app/src/main/res/layout/activity_list_view_demo.xml
+++ b/app/src/main/res/layout/activity_list_view_demo.xml
@@ -6,6 +6,23 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ListViewDemoActivity">
+    <TextView
+        android:id="@+id/data_counts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/data_counts"/>
+    <EditText
+        android:id="@+id/edit_data_counts"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:inputType="number"/>
+
+    <Button
+        android:id="@+id/button_data_counts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/confirm" />
+
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
